--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,7 +6,13 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body {
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
+html,
+body {
     height: 100vh;
     width: 100vw;
     background-color: black;
@@ -34,7 +40,7 @@ section#telefone {
     background: url('../imagens/frame-iphone.png') no-repeat;
 }
 
-iframe#tela{
+iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
@@ -42,18 +48,20 @@ iframe#tela{
     height: 471px;
 }
 
-section#redes-sociais{
+section#redes-sociais {
     text-align: right;
 
 }
-section#redes-sociais img{
+
+section#redes-sociais img {
     width: 50px;
     margin: 10px;
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.555);
     box-sizing: border-box;
 }
-section#redes-sociais img:hover{
+
+section#redes-sociais img:hover {
     border: 2px solid rgba(255, 255, 255, 0.511);
     transform: translate(-3px, -3px);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.624);
